--- a/app/src/main/res/layout-land/content_quiz.xml
+++ b/app/src/main/res/layout-land/content_quiz.xml
@@ -32,7 +32,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="    bottom"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
         <ImageButton
             android:id="@+id/previous_button"
@@ -45,4 +45,11 @@
             android:layout_height="wrap_content"
             android:src="@drawable/arrow_right"/>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="@string/cheat_button"/>
 </FrameLayout>
